# nos_pico

./: .gitmodules  LICENSE  README.md  REAMME.md
nos_pico_hard/: .gitignore  .gitmodules  CMakeLists.txt  nos_pico_hard.cpp  nostr_sign.cpp  nostr_sign.hpp
nos_pico_rust/: Cargo.toml
nos_pico_rust/src/: app.rs  config.rs  main.rs  nostr.rs  serial.rs
nos_pico_rust/src/nostr/: generate_event.rs  verify.rs  web_socket.rs  ws_send_tx.rs
