[package]
name = "nos_pico_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
hex = "0.4.3"
secp256k1 = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
serde_derive = "1.0.228"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-tungstenite = {version = "0.28.0", features = ["url","native-tls"]}
tokio-util = { version = "0.7.17", features = ["full"]}
